# stock-talk

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  start-worker.sh  start.sh
app/: __init__.py  main.py  scheduler.py
app/api/: routes.py
app/core/: config.py  database.py
app/models/: __init__.py  report.py  stock.py
app/services/: __init__.py  finnhub_client.py  market_context.py  reddit_scraper.py  report_generator.py  stock_fetcher.py  stock_screener.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: base.html  glossary.html  history.html  index.html  report.html  stock.html  watchlist.html
