[project]
name = "stock-talk"
version = "1.0.0"
description = "Daily value stock analysis from Reddit sentiment and market data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "praw>=7.7.1",
    "yfinance>=0.2.36",
    "pandas>=2.2.0",
    "numpy>=1.26.3",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.4",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "ruff>=0.1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
